--- a/charts/kubezero-metrics/templates/istio-service.yaml
+++ b/charts/kubezero-metrics/templates/istio-service.yaml
@@ -1,37 +1,23 @@
-{{- if .Values.grafana.istio.enabled }}
+{{- range $name, $service := .Values.istio }}
+
+{{- if $service.enabled }}
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: grafana
-  namespace: {{ .Release.Namespace }}
+  name: {{ $name }}
+  namespace: {{ $.Release.Namespace }}
   labels:
-{{ include "kubezero-lib.labels" . | indent 4 }}
+{{ include "kubezero-lib.labels" $ | indent 4 }}
 spec:
   hosts:
-  - {{ .Values.grafana.istio.url }}
+  - {{ index $service.url }}
   gateways:
-  - {{ .Values.grafana.istio.gateway }}
+  - {{ index $service.gateway }}
   http:
   - route:
     - destination:
-        host: metrics-grafana
-{{- end }}
-{{- if .Values.prometheus.istio.enabled }}
+        host: metrics-{{- $name }}
 ---
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: prometheus
-  namespace: {{ .Release.Namespace }}
-  labels:
-{{ include "kubezero-lib.labels" . | indent 4 }}
-spec:
-  hosts:
-  - {{ .Values.prometheus.istio.url }}
-  gateways:
-  - {{ .Values.prometheus.istio.gateway }}
-  http:
-  - route:
-    - destination:
-        host: metrics-kube-prometheus-st-prometheus
+{{- end }}
+
 {{- end }}
