Minor version bump for redis, added redis-cluster support

--- a/charts/kubezero-redis/Chart.yaml
+++ b/charts/kubezero-redis/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-redis
 description: KubeZero Umbrella Chart for Redis HA
 type: application
-version: 0.1.0
+version: 0.2.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -15,6 +15,12 @@ dependencies:
     version: ">= 0.1.3"
     repository: https://zero-down-time.github.io/kubezero/
   - name: redis
-    version: 12.0.0
+    version: 12.1.1
     repository: https://charts.bitnami.com/bitnami
+    condition: redis.enabled
+  - name: redis-cluster
+    version: 4.1.0
+    repository: https://charts.bitnami.com/bitnami
+    condition: redis-cluster.enabled
+
 kubeVersion: ">= 1.16.0"
