--- a/charts/kubezero-redis/values.yaml
+++ b/charts/kubezero-redis/values.yaml
@@ -1,4 +1,6 @@
 redis:
+  enabled: false
+
   redisPort: 6379
 
   cluster:
@@ -22,6 +24,26 @@ redis:
         release: metrics
 #   extraArgs:
 #     redis.addr: "redis://localhost:6379"
+
+
+redis-cluster:
+  enabled: false
+
+  usePassword: false
+
+  cluster:
+    nodes: 2
+    replicas: 1
+
+  metrics:
+    enabled: false
+    serviceMonitor:
+      enabled: false
+      selector:
+        release: metrics
+
+  persistence:
+    enabled: false
 
 istio:
   enabled: false
