ECK fixes for Kube 1.18, Redis cluster support incl. Enyoy proxy

--- a/charts/kubezero-logging/templates/eck/elasticsearch.yaml
+++ b/charts/kubezero-logging/templates/eck/elasticsearch.yaml
@@ -48,6 +48,9 @@ spec:
         {{- end }}
         containers:
         - name: elasticsearch
+          securityContext:
+            capabilities:
+              add: ["SYS_CHROOT"]
           resources:
             requests:
               cpu: {{ default "200m" .cpu_request }}
