--- a/charts/kubezero/templates/logging.yaml
+++ b/charts/kubezero/templates/logging.yaml
@@ -93,6 +93,7 @@ fluent-bit:
     - /webhooks/4/clientConfig/caBundle
     - /webhooks/5/clientConfig/caBundle
     - /webhooks/6/clientConfig/caBundle
+    - /webhooks/7/clientConfig/caBundle
   - group: apiextensions.k8s.io
     kind: CustomResourceDefinition
     jsonPointers:
