Fix empty CRDs, only deploy eck-operator if needed

--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -2,7 +2,7 @@
 # fullnameOverride: ""
 
 eck-operator:
-  enabled: true
+  enabled: false
   installCRDs: false
   tolerations:
   - key: node-role.kubernetes.io/master
