--- a/charts/kubezero/templates/logging.yaml
+++ b/charts/kubezero/templates/logging.yaml
@@ -1,8 +1,10 @@
 {{- define "logging-values" }}
-
-{{- with index .Values "logging" "eck-operator" }}
+{{- if or .Values.logging.es .Values.logging.kibana }}
 eck-operator:
+  enabled: true
+  {{- with index .Values "logging" "eck-operator" }}
   {{- toYaml . | nindent 2 }}
+  {{- end }}
 {{- end }}
 
 {{- if .Values.logging.elastic_password }}
