--- a/charts/kubezero-aws-ebs-csi-driver/Chart.yaml
+++ b/charts/kubezero-aws-ebs-csi-driver/Chart.yaml
@@ -17,6 +17,9 @@ keywords:
 maintainers:
   - name: Quarky9
 dependencies:
+  - name: aws-ebs-csi-driver
+    version: 0.6.1
+    repository: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
   - name: kubezero-lib
     version: ">= 0.1.3"
     repository: https://zero-down-time.github.io/kubezero/
