More logging tuning

--- a/charts/kubezero-logging/charts/fluent-bit/conf/fluent-bit.conf
+++ b/charts/kubezero-logging/charts/fluent-bit/conf/fluent-bit.conf
@@ -13,11 +13,13 @@
     Path /var/log/containers/*.log
     Parser cri-log
     Tag cri.*
-    Mem_Buf_Limit {{ .Values.config.input.memBufLimit }}
     Skip_Long_Lines On
-    Refresh_Interval {{ .Values.config.input.refreshInterval }}
     DB /var/log/flb_kube.db
     DB.Sync Normal
+    {{- with .Values.config.input }}
+    Mem_Buf_Limit {{ default "16MB" .memBufLimit }}
+    Refresh_Interval {{ default 10 .refreshInterval }}
+    {{- end }}
 
 [FILTER]
     Name    lua
@@ -57,16 +59,18 @@
     script  /fluent-bit/etc/functions.lua
     call    nest_k8s_ns
 
-{{- if .Values.config.outputs }}
-{{ tpl .Values.config.outputs . }}
-{{- else }}
+{{- if not .Values.config.output }}
+{{ .Values.config.outputs }}
+{{- end }}
+
+{{- with .Values.config.output }}
 [OUTPUT]
     Match *
     Name forward
-    Host {{ .Values.config.output.host }}
+    Host {{ .host }}
     Port 24224
-    Shared_Key {{ .Values.config.output.sharedKey }}
-    tls {{ ternary "on" "off" .Values.config.output.tls }}
+    Shared_Key {{ .sharedKey }}
+    tls {{ ternary "on" "off" .tls }}
     Send_options true
     Require_ack_response true
 {{- end }}
