More logging tuning

--- a/charts/kubezero-logging/charts/fluent-bit/conf/fluent-bit.conf
+++ b/charts/kubezero-logging/charts/fluent-bit/conf/fluent-bit.conf
@@ -59,10 +59,9 @@
     script  /fluent-bit/etc/functions.lua
     call    nest_k8s_ns
 
-{{- if not .Values.config.output }}
+{{- if .Values.config.outputs }}
 {{ .Values.config.outputs }}
-{{- end }}
-
+{{- else }}
 {{- with .Values.config.output }}
 [OUTPUT]
     Match *
@@ -73,4 +72,5 @@
     tls {{ ternary "on" "off" .tls }}
     Send_options true
     Require_ack_response true
+{{- end }}
 {{- end }}
