--- a/charts/kubezero-logging/Chart.yaml
+++ b/charts/kubezero-logging/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-logging
 description: KubeZero Umbrella Chart for complete EFK stack
 type: application
-version: 0.5.1
+version: 0.5.2
 appVersion: 1.3.1
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
@@ -23,12 +23,11 @@ dependencies:
     repository: https://helm.elastic.co
     condition: eck-operator.enabled
   - name: fluentd
-    version: 2.5.1
-    repository: https://kubernetes-charts.storage.googleapis.com/
+    version: 2.5.3
+    repository: charts/fluentd
     condition: fluentd.enabled
-#  - name: fluent-bit
-#    version: 0.7.10
-#    repository: https://zero-down-time.github.io/kubezero/
-    # repository: https://fluent.github.io/helm-charts
-#    condition: fluent-bit.enabled
+  - name: fluent-bit
+    version: 0.7.10
+    repository: charts/fluent-bit
+    condition: fluent-bit.enabled
 kubeVersion: ">= 1.16.0"
