--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -87,6 +87,7 @@ kube-prometheus-stack:
       retention: 8d
       portName: http-prometheus
       logFormat: json
+      # externalUrl:
 
       resources:
         requests:
