Allow custom memory overwrites for ES cluster

--- a/charts/kubezero-logging/templates/eck/elasticsearch.yaml
+++ b/charts/kubezero-logging/templates/eck/elasticsearch.yaml
@@ -54,12 +54,12 @@ spec:
           resources:
             requests:
               cpu: {{ default "200m" .cpu_request }}
-              memory: {{ mul 2 ( default "2" .jvm_heap ) }}Gi
+              memory: {{ default ( mul 2 ( default "2" .jvm_heap ) ) .memory_request }}Gi
             limits:
               {{- if .cpu_limit }}
               cpu: {{ .cpu_limit }}
               {{- end }}
-              memory: {{ mul 2 ( default "2" .jvm_heap ) }}Gi
+              memory: {{ default ( mul 2 ( default "2" .jvm_heap ) ) .memory_limit }}Gi
           env:
           - name: ES_JAVA_OPTS
             value: -Xms{{ default "2" .jvm_heap }}g -Xmx{{ default "2" .jvm_heap }}g
