Reduce logLevel of prometheus adapter

--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -141,7 +141,7 @@ kube-prometheus-stack:
 # Metrics adapter
 prometheus-adapter:
   enabled: true
-  loglevel: 1
+  logLevel: 1
   prometheus:
     url: http://metrics-kube-prometheus-st-prometheus
   tolerations:
