--- a/charts/kubezero-kiam/Chart.yaml
+++ b/charts/kubezero-kiam/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: kubezero-kiam
 description: KubeZero Umbrella Chart for Kiam
 type: application
-version: 0.2.12
-appVersion: 3.6
+version: 0.3.0
+appVersion: "4.0"
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -16,7 +16,7 @@ dependencies:
     version: ">= 0.1.3"
     repository: https://zero-down-time.github.io/kubezero/
   - name: kiam
-    version: 5.9.0
+    version: 6.0.0
     repository: https://uswitch.github.io/kiam-helm-charts/charts/
     condition: kiam.enabled
 kubeVersion: ">= 1.16.0"
