--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -11,7 +11,7 @@ eck-operator:
     node-role.kubernetes.io/master: ""
 
 # Version for ElasticSearch and Kibana have to match so we define it at top-level
-version: 7.10.0
+version: 7.10.1
 
 elastic_password: "" # super_secret_elastic_password
 
@@ -145,7 +145,7 @@ fluentd:
         # KubeZero pipeline incl. GeoIP etc.
         pipeline fluentd
 
-        host "#{ENV['OUTPUT_HOST']}"
+        hosts "#{ENV['OUTPUT_HOST']}"
         port "#{ENV['OUTPUT_PORT']}"
         scheme "#{ENV['OUTPUT_SCHEME']}"
         ssl_version "#{ENV['OUTPUT_SSL_VERSION']}"
@@ -156,13 +156,15 @@ fluentd:
         log_es_400_reason
         logstash_format true
         reconnect_on_error true
-        # reload_on_failure true
-        request_timeout 15s
+        reload_on_failure true
+        request_timeout 60s
         suppress_type_name true
 
         <buffer tag>
           @type file_single
           path /var/log/fluentd-buffers/kubernetes.system.buffer
+          chunk_limit_records 8192
+          total_limit_size 4GB
           flush_mode interval
           flush_thread_count 2
           flush_interval 30s
@@ -170,6 +172,7 @@ fluentd:
           retry_type exponential_backoff
           retry_timeout 60m
           overflow_action drop_oldest_chunk
+          disable_chunk_backup true
         </buffer>
       </match>
 
