--- a/charts/kubeadm/templates/JoinConfiguration.yaml
+++ b/charts/kubeadm/templates/JoinConfiguration.yaml
@@ -1,18 +1,15 @@
 apiVersion: kubeadm.k8s.io/v1beta2
 kind: JoinConfiguration
-metadata:
-  name: kubezero-joinconfiguration
 discovery:
-  bootstrapToken:
-    apiServerEndpoint: {{ .Values.apiEndpoint }}
-    token: {{ .Values.joinToken }}
-    caCertHashes:
-    - "{{ .Values.caCertHash }}"
+  file:
+    kubeConfigPath: /root/.kube/config
+controlPlane:
+  localAPIEndpoint:
+    advertiseAddress: IP_ADDRESS
+    bindPort: {{ regexSplit ":" .Values.apiEndpoint -1 | last }}
 nodeRegistration:
   ignorePreflightErrors:
   - DirAvailable--var-lib-etcd
   - Swap
-controlPlane:
-  localAPIEndpoint:
-    advertiseAddress: {{ .Values.ipAddress }}
-    bindPort: {{ regexSplit ":" .Values.apiEndpoint -1 | last }}
+  kubeletExtraArgs:
+    node-labels: {{ .Values.nodeLabels | quote }}
