--- a/charts/kubeadm/templates/KubeletConfiguration.yaml
+++ b/charts/kubeadm/templates/KubeletConfiguration.yaml
@@ -3,6 +3,9 @@ kind: KubeletConfiguration
 metadata:
   name: kubezero-kubeletconfiguration
 failSwapOn: false
+cgroupDriver: cgroupfs
+logging:
+  format: json
 hairpinMode: hairpin-veth
 resolvConf: /run/systemd/resolve/resolv.conf
 protectKernelDefaults: true
@@ -12,8 +15,5 @@ eventRecordQPS: 0
 # tlsPrivateKeyFile: /var/lib/kubelet/pki/kubelet.key
 tlsCipherSuites: [TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_128_GCM_SHA256]
 featureGates:
-  # Default anyways but make kube-bench happy
-  RotateKubeletServerCertificate: true
-  CSIMigration: true
   CSIMigrationAWS: true
   CSIMigrationAWSComplete: true
