--- a/charts/kubeadm/templates/aws-iam-authenticator/deployment.yaml
+++ b/charts/kubeadm/templates/aws-iam-authenticator/deployment.yaml
@@ -51,7 +51,7 @@ metadata:
 
 ---
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: aws-iam-authenticator
   namespace: kube-system
@@ -151,14 +151,3 @@ spec:
       - name: state
         hostPath:
           path: /var/aws-iam-authenticator/
----
-apiVersion: iamauthenticator.k8s.aws/v1alpha1
-kind: IAMIdentityMapping
-metadata:
-  name: kubernetes-admin
-spec:
-  # Arn of the User or Role to be allowed to authenticate
-  arn: {{ .Values.kubeAdminRole }}
-  username: kubernetes-admin
-  groups:
-  - system:masters
