--- a/charts/kubeadm/templates/aws-iam-authenticator/crds.yaml
+++ b/charts/kubeadm/templates/aws-iam-authenticator/crds.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.platform "aws" }}
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -30,3 +31,4 @@ spec:
               type: array
               items:
                 type: string
+{{- end }}
