--- a/charts/kubeadm/templates/aws-iam-authenticator/deployment.yaml
+++ b/charts/kubeadm/templates/aws-iam-authenticator/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.platform "aws" }}
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -151,3 +152,4 @@ spec:
       - name: state
         hostPath:
           path: /var/aws-iam-authenticator/
+{{- end }}
