--- a/charts/kubeadm/templates/aws-iam-authenticator/mappings.yaml
+++ b/charts/kubeadm/templates/aws-iam-authenticator/mappings.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.platform "aws" }}
 # Controller role which is more or less cluster-admin once enrolled
 apiVersion: iamauthenticator.k8s.aws/v1alpha1
 kind: IAMIdentityMapping
@@ -32,3 +33,4 @@ spec:
   username: kubernetes-admin
   groups:
   - system:masters
+{{- end }}
