Further tuning of fluentd throughput

--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -163,11 +163,11 @@ fluentd:
         <buffer tag>
           @type file_single
           path /var/log/fluentd-buffers/kubernetes.system.buffer
-          chunk_limit_records 8192
+          chunk_limit_size 16MB
           total_limit_size 4GB
           flush_mode interval
-          flush_thread_count 2
-          flush_interval 30s
+          flush_thread_count 4
+          flush_interval 5s
           flush_at_shutdown true
           retry_type exponential_backoff
           retry_timeout 60m
