--- a/charts/kubezero-aws-ebs-csi-driver/values.yaml
+++ b/charts/kubezero-aws-ebs-csi-driver/values.yaml
@@ -1,9 +1,10 @@
 aws-ebs-csi-driver:
   replicaCount: 1
+  logLevel: 1
 
   enableVolumeScheduling: true
-  enableVolumeResizing: false
-  enableVolumeSnapshot: false
+  enableVolumeResizing: true
+  enableVolumeSnapshot: true
 
   nodeSelector:
     node-role.kubernetes.io/master: ""
@@ -20,6 +21,20 @@ aws-ebs-csi-driver:
   extraVolumeTags: {}
   #  Name: KubeZero-Cluster
 
-StorageClass:
-  create: true
-  default: true
+  storageClasses:
+  - name: ebs-sc-gp2-xfs
+    volumeBindingMode: WaitForFirstConsumer
+    allowVolumeExpansion: true
+    parameters:
+      csi.storage.k8s.io/fstype: xfs
+      type: gp2
+      encrypted: "true"
+  - name: ebs-sc-gp3-xfs
+    annotations:
+      storageclass.kubernetes.io/is-default-class: "true"
+    volumeBindingMode: WaitForFirstConsumer
+    allowVolumeExpansion: true
+    parameters:
+      csi.storage.k8s.io/fstype: xfs
+      type: gp3
+      encrypted: "true"
