--- a/charts/kubezero-aws-efs-csi-driver/Chart.yaml
+++ b/charts/kubezero-aws-efs-csi-driver/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
 name: kubezero-aws-efs-csi-driver
 description: KubeZero Umbrella Chart for aws-efs-csi-driver
-version: 0.2.0
-appVersion: 1.0.0
-kubeVersion: ">=1.16.0-0"
+version: 0.2.1
+appVersion: 1.1.1
+kubeVersion: ">=1.18.0-0"
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 sources:
@@ -20,7 +20,6 @@ dependencies:
   - name: kubezero-lib
     version: ">= 0.1.3"
     repository: https://zero-down-time.github.io/kubezero/
-# Once they properly update upstream
-#  - name: aws-ebs-csi-driver
-#    version: 1.0.0
-#    repository: https://kubernetes-sigs.github.io/aws-efs-csi-driver
+  - name: aws-efs-csi-driver
+    version: 1.1.2
+    repository: https://kubernetes-sigs.github.io/aws-efs-csi-driver/
