Reduce loglevel for efs driver

--- a/charts/kubezero-aws-efs-csi-driver/values.yaml
+++ b/charts/kubezero-aws-efs-csi-driver/values.yaml
@@ -1,6 +1,7 @@
 aws-efs-csi-driver:
   nodeSelector:  {}
     # node.kubernetes.io/csi.efs.fs: EFS-FS_ID
+  logLevel: 1
 
 StorageClass:
   create: true
